# Concurrent-and-Distributed-Processing-Project

./: Board.cpp  Board.h  CMakeLists.txt  Definers.h  Field.cpp  Field.h  FieldInitialization.cpp  FieldsInitialization.h  GameClient.cpp  GameClient.h  GameLogic.cpp  GameLogic.h  GameServer.cpp  GameServer.h  KeyboardInputHandling.cpp  KeyboardInputHandling.h  MainMenu.cpp  MainMenu.h  NetworkMessage.cpp  NetworkMessage.h  Player.cpp  Player.h  PlayerInitialization.cpp  PlayerInitialization.h  Protocol.h  README.md  client_main_game.cpp  concurrent_distributed_game.aps  concurrent_distributed_game.vcxproj  concurrent_distributed_game.vcxproj.filters  game.cpp  launch_game  server.cpp  server_main.cpp  server_main_game.cpp  socket.cpp
code/cpp_files/: Board.cpp  Field.cpp  FieldInitialization.cpp  GameClient.cpp  GameLogic.cpp  GameServer.cpp  KeyboardInputHandling.cpp  MainMenu.cpp  NetworkMessage.cpp  Player.cpp  PlayerInitialization.cpp  client_main_game.cpp  game.cpp  server.cpp  server_main.cpp  server_main_game.cpp  socket.cpp
code/h_files/: Definers.h  FieldsInitialization.h  GameClient.h  GameLogic.h  GameServer.h  NetworkMessage.h  PlayerInitialization.h  server.h  socket.h
